--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 LOG_CHANNEL=stack
+Locate=en
 ## for mssql
 #DB_CONNECTION=sqlsrv
 #DB_HOST=127.0.0.1
