--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "admin-lte": "^3.0",
+        "admin-lte": "^3.0.1",
         "axios": "^0.19",
-        "bootstrap": "^4.3.1",
+        "bootstrap": "^4.0.0",
         "bootstrap-colorpicker": "^3.1.2",
         "bootstrap-slider": "^10.6.2",
         "bootstrap-switch": "^3.4.0",
         "bootstrap4-duallistbox": "^4.0.1",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "bs-custom-file-input": "^1.3.2",
         "chart.js": "2.9.2",
         "cross-env": "^5.1",
@@ -51,8 +53,8 @@
         "popper.js": "^1.12",
         "raphael": "^2.3.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "7.*",
         "select2": "^4.0.11",
         "sparklines": "^1.2.0",
         "summernote": "^0.8.12",
@@ -60,6 +62,7 @@
         "tempusdominus-bootstrap-4": "^5.1.2",
         "tempusdominus-core": "5.0.3",
         "toastr": "^2.1.4",
+        "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
         "webpack": "^4.0.0"
     },
