--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "jquery-knob-chif": "^1.2.13",
         "jquery-mapael": "^2.2.0",
         "jquery-mousewheel": "^3.1.13",
+        "jquery-timepicker": "^1.3.3",
         "jquery-ui-dist": "^1.12.1",
         "jquery-validation": "^1.19.1",
         "jqvmap-novulnerability": "^1.5.1",
